# nonebot_plugin_pjsekaibot

./: README.md  README_CN.md  __init__.py  logger.py  matcher.py  pyproject.toml
handler/: __init__.py  admin.py  alias.py  b30.py  bind.py  chart.py  chartrank.py  help_example.py  line.py  profile.py  rankmatch.py  ycx.py
modules/: downloader.py  imagemodules.py  init.py  ntfy.py  utils.py  you_cannot_go_to_sleep.py
